# rpn-api-calculator-python

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: docker-build.yml  python-app.yml
src/main/docker/: Dockerfile  app.yml  docker-compose.yml  postgresql.yml
src/main/python/rpn_api_calculator/: main.py
src/main/python/rpn_api_calculator/api/: calculation_resource.py
src/main/python/rpn_api_calculator/db/: config_db.py  database.py
src/main/python/rpn_api_calculator/domain/: calculation.py
src/main/python/rpn_api_calculator/service/: calculation_service.py
src/main/webapp/: README.md  package.json
src/main/webapp/public/: index.html
src/main/webapp/src/: App.js
src/main/webapp/src/components/: Calculator.js
src/rpn_api_calculator/: __init__.py  main.py
src/rpn_api_calculator/api/: calculation_resource.py
src/test/python/integration/: test_calculation.py  test_health.py  test_integration_example.py
tests/: test_health.py
tests/integration/: test_integration_example.py
tests/unit/: test_example.py
