[project]
name = "rpn-api-calculator-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Pierre Filliolaud",email = "githug@filliolaud.net"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.2.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.1.1"
requests = "^2.32.3"
httpx = "^0.28.1"

[tool.poetry]
packages = [
    { include = "rpn_api_calculator", from = "src/main/python" }
]